// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Hero Banner align-left - renders correctly 1`] = `
<test>
  <section
    class="ecl-hero-banner ecl-hero-banner--default"
  >
    <div
      class="ecl-container ecl-hero-banner__container"
    >
      <div
        class="ecl-hero-banner__content"
      >
        <h1
          class="ecl-hero-banner__title"
        >
          EU Budget for the future (default)
        </h1>
        <p
          class="ecl-hero-banner__description"
        >
          The European Commission has put forward ambitious yet realistic proposals for a modern EU budget. It is time for an EU budget that reflects rapid developments in innovation, the economy, the environment and geopolitics, amongst others.
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Hero Banner align-left renders correctly with extra attributes 1`] = `
<test>
  <section
    class="ecl-hero-banner ecl-hero-banner--default"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-container ecl-hero-banner__container"
    >
      <div
        class="ecl-hero-banner__content"
      >
        <h1
          class="ecl-hero-banner__title"
        >
          EU Budget for the future (default)
        </h1>
        <p
          class="ecl-hero-banner__description"
        >
          The European Commission has put forward ambitious yet realistic proposals for a modern EU budget. It is time for an EU budget that reflects rapid developments in innovation, the economy, the environment and geopolitics, amongst others.
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Hero Banner align-left renders correctly with extra class names 1`] = `
<test>
  <section
    class="ecl-hero-banner ecl-hero-banner--default custom-class custom-class--test"
  >
    <div
      class="ecl-container ecl-hero-banner__container"
    >
      <div
        class="ecl-hero-banner__content"
      >
        <h1
          class="ecl-hero-banner__title"
        >
          EU Budget for the future (default)
        </h1>
        <p
          class="ecl-hero-banner__description"
        >
          The European Commission has put forward ambitious yet realistic proposals for a modern EU budget. It is time for an EU budget that reflects rapid developments in innovation, the economy, the environment and geopolitics, amongst others.
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Hero Banner default - renders correctly 1`] = `
<test>
  <section
    class="ecl-hero-banner ecl-hero-banner--default ecl-hero-banner--centered"
  >
    <div
      class="ecl-container ecl-hero-banner__container"
    >
      <div
        class="ecl-hero-banner__content"
      >
        <h1
          class="ecl-hero-banner__title"
        >
          EU Budget for the future (default)
        </h1>
        <p
          class="ecl-hero-banner__description"
        >
          The European Commission has put forward ambitious yet realistic proposals for a modern EU budget. It is time for an EU budget that reflects rapid developments in innovation, the economy, the environment and geopolitics, amongst others.
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Hero Banner default renders correctly with extra attributes 1`] = `
<test>
  <section
    class="ecl-hero-banner ecl-hero-banner--default ecl-hero-banner--centered"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-container ecl-hero-banner__container"
    >
      <div
        class="ecl-hero-banner__content"
      >
        <h1
          class="ecl-hero-banner__title"
        >
          EU Budget for the future (default)
        </h1>
        <p
          class="ecl-hero-banner__description"
        >
          The European Commission has put forward ambitious yet realistic proposals for a modern EU budget. It is time for an EU budget that reflects rapid developments in innovation, the economy, the environment and geopolitics, amongst others.
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Hero Banner default renders correctly with extra class names 1`] = `
<test>
  <section
    class="ecl-hero-banner ecl-hero-banner--default ecl-hero-banner--centered custom-class custom-class--test"
  >
    <div
      class="ecl-container ecl-hero-banner__container"
    >
      <div
        class="ecl-hero-banner__content"
      >
        <h1
          class="ecl-hero-banner__title"
        >
          EU Budget for the future (default)
        </h1>
        <p
          class="ecl-hero-banner__description"
        >
          The European Commission has put forward ambitious yet realistic proposals for a modern EU budget. It is time for an EU budget that reflects rapid developments in innovation, the economy, the environment and geopolitics, amongst others.
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Hero Banner default with validation enabled and missing input data returns the right warning message 1`] = `
<test>
  <section
    class="ecl-hero-banner ecl-hero-banner--default ecl-hero-banner--centered"
  >
    <div
      class="ecl-container ecl-hero-banner__container"
    >
      <div
        class="ecl-hero-banner__content"
      >
        <h1
          class="ecl-hero-banner__title"
        />
        <p
          class="ecl-hero-banner__description"
        >
          The European Commission has put forward ambitious yet realistic proposals for a modern EU budget. It is time for an EU budget that reflects rapid developments in innovation, the economy, the environment and geopolitics, amongst others.
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after"
          href=""
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
          <span
            class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
            title="[icon] - ecl compliant"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#notifications--success"
              />
            </svg>
          </span>
        </a>
        <span
          class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
          title="[link--cta] - ecl compliant"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#notifications--success"
            />
          </svg>
        </span>
      </div>
    </div>
  </section>
  <!-- ecl2-compliance: hero-banner--default -->
  <div
    class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
  >
    <p
      class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
    >
      [hero-banner--default] -  The {{ title }} propert needs toset and filled in. The {{ link.link.path }} is needed for the call to action link to work.
    </p>
  </div>
</test>
`;

exports[`EC - Hero Banner image - renders correctly 1`] = `
<test>
  <section
    class="ecl-hero-banner ecl-hero-banner--image ecl-hero-banner--centered"
  >
    <div
      class="ecl-hero-banner__image"
      style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
    />
    <div
      class="ecl-container ecl-hero-banner__container"
    >
      <div
        class="ecl-hero-banner__content"
      >
        <h1
          class="ecl-hero-banner__title"
        >
          EU Budget for the future (image)
        </h1>
        <p
          class="ecl-hero-banner__description"
        >
          The European Commission has put forward ambitious yet realistic proposals for a modern EU budget. It is time for an EU budget that reflects rapid developments in innovation, the economy, the environment and geopolitics, amongst others.
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Hero Banner image renders correctly with extra attributes 1`] = `
<test>
  <section
    class="ecl-hero-banner ecl-hero-banner--image ecl-hero-banner--centered"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-hero-banner__image"
      style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
    />
    <div
      class="ecl-container ecl-hero-banner__container"
    >
      <div
        class="ecl-hero-banner__content"
      >
        <h1
          class="ecl-hero-banner__title"
        >
          EU Budget for the future (image)
        </h1>
        <p
          class="ecl-hero-banner__description"
        >
          The European Commission has put forward ambitious yet realistic proposals for a modern EU budget. It is time for an EU budget that reflects rapid developments in innovation, the economy, the environment and geopolitics, amongst others.
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Hero Banner image renders correctly with extra class names 1`] = `
<test>
  <section
    class="ecl-hero-banner ecl-hero-banner--image ecl-hero-banner--centered custom-class custom-class--test"
  >
    <div
      class="ecl-hero-banner__image"
      style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
    />
    <div
      class="ecl-container ecl-hero-banner__container"
    >
      <div
        class="ecl-hero-banner__content"
      >
        <h1
          class="ecl-hero-banner__title"
        >
          EU Budget for the future (image)
        </h1>
        <p
          class="ecl-hero-banner__description"
        >
          The European Commission has put forward ambitious yet realistic proposals for a modern EU budget. It is time for an EU budget that reflects rapid developments in innovation, the economy, the environment and geopolitics, amongst others.
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Hero Banner image-shade - renders correctly 1`] = `
<test>
  <section
    class="ecl-hero-banner ecl-hero-banner--image-shade ecl-hero-banner--centered"
  >
    <div
      class="ecl-hero-banner__image"
      style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
    />
    <div
      class="ecl-container ecl-hero-banner__container"
    >
      <div
        class="ecl-hero-banner__content"
      >
        <h1
          class="ecl-hero-banner__title"
        >
          EU Budget for the future (image shade)
        </h1>
        <p
          class="ecl-hero-banner__description"
        >
          The European Commission has put forward ambitious yet realistic proposals for a modern EU budget. It is time for an EU budget that reflects rapid developments in innovation, the economy, the environment and geopolitics, amongst others.
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Hero Banner image-shade renders correctly with extra attributes 1`] = `
<test>
  <section
    class="ecl-hero-banner ecl-hero-banner--image-shade ecl-hero-banner--centered"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-hero-banner__image"
      style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
    />
    <div
      class="ecl-container ecl-hero-banner__container"
    >
      <div
        class="ecl-hero-banner__content"
      >
        <h1
          class="ecl-hero-banner__title"
        >
          EU Budget for the future (image shade)
        </h1>
        <p
          class="ecl-hero-banner__description"
        >
          The European Commission has put forward ambitious yet realistic proposals for a modern EU budget. It is time for an EU budget that reflects rapid developments in innovation, the economy, the environment and geopolitics, amongst others.
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Hero Banner image-shade renders correctly with extra class names 1`] = `
<test>
  <section
    class="ecl-hero-banner ecl-hero-banner--image-shade ecl-hero-banner--centered custom-class custom-class--test"
  >
    <div
      class="ecl-hero-banner__image"
      style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
    />
    <div
      class="ecl-container ecl-hero-banner__container"
    >
      <div
        class="ecl-hero-banner__content"
      >
        <h1
          class="ecl-hero-banner__title"
        >
          EU Budget for the future (image shade)
        </h1>
        <p
          class="ecl-hero-banner__description"
        >
          The European Commission has put forward ambitious yet realistic proposals for a modern EU budget. It is time for an EU budget that reflects rapid developments in innovation, the economy, the environment and geopolitics, amongst others.
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Hero Banner primary - renders correctly 1`] = `
<test>
  <section
    class="ecl-hero-banner ecl-hero-banner--primary ecl-hero-banner--centered"
  >
    <div
      class="ecl-container ecl-hero-banner__container"
    >
      <div
        class="ecl-hero-banner__content"
      >
        <h1
          class="ecl-hero-banner__title"
        >
          EU Budget for the future (primary)
        </h1>
        <p
          class="ecl-hero-banner__description"
        >
          The European Commission has put forward ambitious yet realistic proposals for a modern EU budget. It is time for an EU budget that reflects rapid developments in innovation, the economy, the environment and geopolitics, amongst others.
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Hero Banner primary renders correctly with extra attributes 1`] = `
<test>
  <section
    class="ecl-hero-banner ecl-hero-banner--primary ecl-hero-banner--centered"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-container ecl-hero-banner__container"
    >
      <div
        class="ecl-hero-banner__content"
      >
        <h1
          class="ecl-hero-banner__title"
        >
          EU Budget for the future (primary)
        </h1>
        <p
          class="ecl-hero-banner__description"
        >
          The European Commission has put forward ambitious yet realistic proposals for a modern EU budget. It is time for an EU budget that reflects rapid developments in innovation, the economy, the environment and geopolitics, amongst others.
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Hero Banner primary renders correctly with extra class names 1`] = `
<test>
  <section
    class="ecl-hero-banner ecl-hero-banner--primary ecl-hero-banner--centered custom-class custom-class--test"
  >
    <div
      class="ecl-container ecl-hero-banner__container"
    >
      <div
        class="ecl-hero-banner__content"
      >
        <h1
          class="ecl-hero-banner__title"
        >
          EU Budget for the future (primary)
        </h1>
        <p
          class="ecl-hero-banner__description"
        >
          The European Commission has put forward ambitious yet realistic proposals for a modern EU budget. It is time for an EU budget that reflects rapid developments in innovation, the economy, the environment and geopolitics, amongst others.
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</test>
`;
